[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "survey_processing"
version = "0.1.2"
authors = [
   { name="Cary Greenwood", email="cary.greenwood@nv5.com" },
]
description = "Survey processing tools"
readme = "README.md"
requires-python = ">=3.8,<3.12"  # Specify Python version constraint
dependencies = [
   "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["survey_processing"]

[project.scripts]
survey-process = "survey_processing.__main__:main"

[tool.hatch.metadata]
allow-direct-references = true